Fixed Popover overflow top layer scrollbar

--- a/src/popover.css
+++ b/src/popover.css
@@ -2,13 +2,17 @@
    Variables
    ========================================================================== */
 
+.ts-popover {
+    --ts-popover-position: fixed;
+}
+
 /* ==========================================================================
    Base
    ========================================================================== */
 
 .ts-popover {
     display: block;
-    position: relative;
+    position: fixed;
     text-decoration: none;
     color: inherit;
     border: 1px solid var(--ts-gray-300);
